@@ -44,7 +44,9 @@ LOAD_MAP = { synglob.ID_LANG_ADA : TAGLIB + 'adatags',
              synglob.ID_LANG_KSH : TAGLIB + 'shtags',
              synglob.ID_LANG_LISP : TAGLIB + 'lisptags',
              synglob.ID_LANG_LUA : TAGLIB + 'luatags',
+             synglob.ID_LANG_MATLAB : TAGLIB + 'matlabtags',
              synglob.ID_LANG_NSIS : TAGLIB + 'nsistags',
+             synglob.ID_LANG_OCTAVE : TAGLIB + 'matlabtags',
              synglob.ID_LANG_PERL : TAGLIB + 'perltags',
              synglob.ID_LANG_PHP : TAGLIB + 'phptags',
              synglob.ID_LANG_PROPS : TAGLIB + 'conftags',
