@@ -10,6 +10,8 @@ Released: xx/xx/2008
 New:
 +Added support for the following filetypes
   - haXe (Classes, Class Methods, Class Variables, Functions)
+  - MatLab (Functions)
+  - Octave (Functions)
   - System Verilog (Classes, Tasks)
   - Verilog (Tasks)
 
